[package]
name = "vulkan-tutorial"
version = "0.1.0"
authors = ["Thomas Lent <tcl293@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
nalgebra-glm = "0.7.0"
winit = "0.22.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.18.0"
cocoa = "0.20.1"
objc = "0.2.7"
