[package]
name = "vulkan-tutorial"
version = "0.1.0"
authors = ["Thomas Lent <tcl293@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.4.1"
nalgebra-glm = "0.7.0"
winit = "0.22.2"
